added style to p

--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
     <h1>Hello Everyone!!</h1>
     <h3>This is html basics.</h3>
     <h3>Third line.</h3>
-    <h4>new heading</h4>
+    <p style="color:blue";>new heading</h4>
 </head>
 <body>
     
