--- a/hello.html
+++ b/hello.html
@@ -2,18 +2,23 @@
 <html lang="en">
 
 <head>
+    <style>
+        h1{
+            color:purple ;
+            background-color: aquamarine;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Hello Everyone!!</h1>
-    <h3>This is html basics.</h3>
-    <h3>Third line.</h3>
-    <p style="color:purple" ;>new heading</p>
 </head>
 
 <body>
-
+    <h1>Hello Everyone!!</h1>
+    <h3>This is html basics.</h3>
+    <h3>Third line.</h3>
+    <p>new heading</p>
 </body>
 
 </html>
